[package]
name = "tiberius-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tiberius = {version =  "0.9.0", features = ["chrono",]}
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
